# httplike

./: Cargo.toml
benches/: header_name.rs  header_value.rs  uri.rs
benches/header_map/: basic.rs
src/: error.rs  extensions.rs  lib.rs  method.rs  request.rs  response.rs  status.rs  version.rs
src/header/: map.rs  mod.rs  name.rs  value.rs
src/uri/: authority.rs  builder.rs  mod.rs  path.rs  port.rs  scheme.rs
tests/: header_map.rs  header_map_fuzz.rs  status_code.rs
