[package]
name = "httplike"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.2.0"
readme = "README.md"
documentation = "https://docs.rs/httplike"
repository = "https://github.com/griff/httplike"
license = "MIT/Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "Brian Olsen <brian@maven-group.org>",
]
description = """
A set of types for representing HTTP, RTSP and SIP requests and responses.
"""
keywords = ["http", "rtsp", "sip"]
categories = ["web-programming"]
edition = "2018"

[features]
default = ["http"]
http = []
rtsp = []
sip = []

[dependencies]
bytes = "0.5"
fnv = "1.0.5"
itoa = "0.4.1"

[dev-dependencies]
indexmap = "1.0"
quickcheck = "0.9.0"
rand = "0.7.0"
seahash = "3.0.5"
serde = "1.0"
serde_json = "1.0"
doc-comment = "0.3"

[[bench]]
name = "header_map"
path = "benches/header_map/mod.rs"

[[bench]]
name = "header_name"
path = "benches/header_name.rs"

[[bench]]
name = "header_value"
path = "benches/header_value.rs"

[[bench]]
name = "uri"
path = "benches/uri.rs"
